# rpg

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: build.sh  clean.sh
src/: common.h  constants.h  context.h  main.cpp  object.cpp  object.h  scene.cpp  scene.h  utils.cpp  utils.h
src/core/: render.cpp  render.h  shutdown.cpp  shutdown.h  startup.cpp  startup.h  update.cpp  update.h
src/ui/: ui.cpp  ui.h
src/utils/: game_pages.cpp  text_bounds.cpp  utils.cpp  utils.h
